/iTrade/ChangeLog
===============================================================================

On the road for v0.4.6 (Nausicaa2)
===============================================================================

2007-07-24  Gilles Dumortier <dgil at ieee.org>
	* LSE update list : Python error :crash software : fixed by installing
	  the latest version of XLRD (v0.6.1 final) (SF bug 1722504)
	* LSE quote list : handle new file format correctly
	* Fix strange properties.txt file content: badly overloading indices to
	  ABCBourse deprecated connector :-( ... explain why CAC 40 percent was
  	  not displaying (SF bug 1722499)
	* Add trace at startup to inspect connector overloading for a quote

2007-07-22  Gilles Dumortier <dgil at ieee.org>
	* Switch to GPL version 3
	* fix a lookupKey() issue + add confirmation to remove a quote
	* Main view reduced - freeze when close with mouse (SF bug 1746651)
	* fix "itrade." prefix for svn
	* fix a missing refresh() method in the graph panel
	* yahoo url issue
	* Merge fix for ASX market : skip header lines (PeterMills> 2007-06-22)
	* Euronext import : new format for volume separator ('\xA0' vs ',')

2007-05-31  Gilles Dumortier <dgil at ieee.org>
	* EBP format for manual importation (file ./PLUGINS)

2007-05-28  Gilles Dumortier <dgil at ieee.org>
	* Fix a KeyError in itrade_wxquote.py, line 1083

2007-05-20  Gilles Dumortier <dgil at ieee.org>
	* modify barchart plugin to import TORONTO markets
	* change "TSX" and "TSE" to "TORONTO EXCHANGE" and "TORONTO VENTURE"
	* Order by %-Autorefresh on: view unstable (SF bug 1722052)
	* News : UnicodeDecodeError when click on boursorama (SF bug 1651029)
	* News : Freshness of information (SF 1649267)
	* Portfolio : Main Market and Currency can't be edited
	* Indices from US market should not have local market yahoo suffix !
	* Quote view : display Yahoo intraday graph for LSE markets
	* Be sure LSE ticker is valid (remove '.' at the end) (SF bug 1719653)